@@ -1,3 +1,5 @@
+/*	$OpenBSD: atomicio.h,v 1.2 2001/01/29 01:58:14 niklas Exp $	*/
+
 /*
  * Copyright (c) 1995,1999 Theo de Raadt
  * All rights reserved.
