@@ -1,3 +1,5 @@
+.\"	$OpenBSD: nchan.ms,v 1.7 2001/01/29 01:58:17 niklas Exp $
+.\"
 .\" 
 .\" Copyright (c) 1999 Markus Friedl.  All rights reserved.
 .\" 
