@@ -1,3 +1,5 @@
+.\"	$OpenBSD: ssh-keygen.1,v 1.29 2001/01/29 01:58:18 niklas Exp $
+.\"
 .\"  -*- nroff -*-
 .\"
 .\" Author: Tatu Ylonen <ylo@cs.hut.fi>
