@@ -1,3 +1,5 @@
+.\"	$OpenBSD: ssh-keyscan.1,v 1.3 2001/01/29 01:58:18 niklas Exp $
+.\"
 .Dd January 1, 1996
 .Dt ssh-keyscan 1
 .Os
