@@ -1,3 +1,5 @@
+#	$OpenBSD: ssh_config,v 1.7 2001/01/29 01:58:18 niklas Exp $
+
 # This is ssh client systemwide configuration file.  This file provides 
 # defaults for users, and the values can be changed in per-user configuration
 # files or on the command line.
